// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CollapsibleMenuViewItemGroup Collapsible Menu Context should merge custom props 1`] = `
<List
  className="Testing"
  isDivided={false}
  onChange={[Function]}
>
  <CollapsibleMenuViewItem
    isIconOnly={false}
    isReversed={false}
    isSelected={false}
    text="Testing"
  />
  <CollapsibleMenuViewItem
    isIconOnly={false}
    isReversed={false}
    isSelected={false}
    text="Testing"
  />
</List>
`;

exports[`CollapsibleMenuViewItemGroup Collapsible Menu Context should merge custom props when selectable 1`] = `
<MenuItemGroup
  className="Testing"
  onChange={[Function]}
>
  <CollapsibleMenuViewItem
    isIconOnly={false}
    isReversed={false}
    isSelected={false}
    key="key1"
    text="Testing"
  />
  <CollapsibleMenuViewItem
    isIconOnly={false}
    isReversed={false}
    isSelected={false}
    key="key2"
    text="Testing"
  />
</MenuItemGroup>
`;

exports[`CollapsibleMenuViewItemGroup Collapsible Menu Context should render a menu item group when selectable 1`] = `
<MenuItemGroup
  onChange={[Function]}
>
  <CollapsibleMenuViewItem
    isIconOnly={false}
    isReversed={false}
    isSelected={false}
    key="key1"
    text="Testing"
  />
  <CollapsibleMenuViewItem
    isIconOnly={false}
    isReversed={false}
    isSelected={false}
    key="key2"
    text="Testing"
  />
</MenuItemGroup>
`;

exports[`CollapsibleMenuViewItemGroup Collapsible Menu Context should render menu items when selectedKeys is not set 1`] = `
<List
  isDivided={false}
  onChange={[Function]}
>
  <CollapsibleMenuViewItem
    isIconOnly={false}
    isReversed={false}
    isSelected={false}
    text="Testing"
  />
  <CollapsibleMenuViewItem
    isIconOnly={false}
    isReversed={false}
    isSelected={false}
    text="Testing"
  />
</List>
`;

exports[`CollapsibleMenuViewItemGroup should merge custom props 1`] = `
<ButtonGroup
  className="face-up-item Testing"
  selectedKeys={Array []}
>
  <CollapsibleMenuViewItem
    isIconOnly={false}
    isReversed={false}
    isSelected={false}
    text="Testing"
  />
  <CollapsibleMenuViewItem
    isIconOnly={false}
    isReversed={false}
    isSelected={false}
    text="Testing"
  />
</ButtonGroup>
`;

exports[`CollapsibleMenuViewItemGroup should render a default component 1`] = `
<ButtonGroup
  className="face-up-item"
  selectedKeys={Array []}
>
  <CollapsibleMenuViewItem
    isIconOnly={false}
    isReversed={false}
    isSelected={false}
    text="Testing"
  />
  <CollapsibleMenuViewItem
    isIconOnly={false}
    isReversed={false}
    isSelected={false}
    text="Testing"
  />
</ButtonGroup>
`;

exports[`CollapsibleMenuViewItemGroup should render a selectable button group 1`] = `
<ButtonGroup
  className="face-up-item"
  selectedKeys={
    Array [
      "key1",
    ]
  }
>
  <CollapsibleMenuViewItem
    isIconOnly={false}
    isReversed={false}
    isSelected={false}
    key="key1"
    text="Testing"
  />
  <CollapsibleMenuViewItem
    isIconOnly={false}
    isReversed={false}
    isSelected={false}
    key="key2"
    text="Testing"
  />
</ButtonGroup>
`;
